# pipelines_rj_escritorio

./: Dockerfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: notifica--o-de-problema.md  requerimento-de-funcionalidade.md
.github/workflows/: cd.yaml  cd_staging.yaml  code-tree-analysis.yaml  lint.yaml
pipelines/: constants.py  flows.py  utils.py
pipelines/chatbot/: __init__.py
pipelines/chatbot/dbt_chatbot_metricas/: flows.py  schedules.py
pipelines/data_catalog/: __init__.py
pipelines/data_catalog/catalog/: flows.py  schedules.py  tasks.py  utils.py
pipelines/deteccao_alagamento_cameras/: __init__.py
pipelines/deteccao_alagamento_cameras/flooding_detection/: flows.py  schedules.py  tasks.py  utils.py
pipelines/dump_alertas/waze/: flows.py
pipelines/dump_datario/: __init__.py
pipelines/dump_datario/dados_mestres_dump_datario/: flows.py  schedules.py
pipelines/dump_ftp/: __init__.py
pipelines/dump_ftp/inea/: flows.py  schedules.py  tasks.py
pipelines/dump_ftp_inea_radar/: __init__.py
pipelines/dump_policy_matrix/: __init__.py
pipelines/dump_url/: __init__.py
pipelines/dump_url_seeketing/: flows.py
pipelines/dump_url_turismo/: flows.py
pipelines/exemplo/: __init__.py
pipelines/healthcheck/: __init__.py
pipelines/identidade_unica/: __init__.py
pipelines/lgpd/: __init__.py
pipelines/mapa_realizacoes/: __init__.py
pipelines/sandbox/: __init__.py
pipelines/stress/: __init__.py
pipelines/templates/: __init__.py
pipelines/waze/: __init__.py  flows.py  tasks.py
queries/: dbt_project.yml  profiles.yml
(+79 files in other folders)
