[project]
name = "pipelines"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dbt-bigquery == 1.7.8",
    "firebase-admin == 6.5.0",
    "geopandas == 0.14.4",
    "google-cloud-asset == 3.26.1",
    "google-cloud-firestore == 2.16.0",
    "google-cloud-logging == 3.10.0",
    "google-cloud-storage == 2.16.0",
    "google-generativeai == 0.3.2",
    "googlemaps == 4.10.0",
    "h3 == 3.7.7",
    "numpy == 1.26.4",
    "opencv-python == 4.9.0.80",
    "pandas == 2.2.2",
    "pendulum == 3.0.0",
    "pillow == 10.3.0",
    "prefect == 1.4.1",
    "requests == 2.31.0",
    "shapely == 2.0.4",
    "unidecode == 1.3.8",
    "prefeitura-rio[pipelines,pipelines-templates]",
]

[project.optional-dependencies]
ci = ["networkx == 3.3", "loguru == 0.7.0", "typer == 0.9.4"]
dev = [
    "black == 23.12.1",
    "flake8 == 6.1.0",
    "pre-commit == 3.7.0",
    "taskipy == 1.12.2",
    "isort == 5.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py310"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
lint = "black . && isort . && flake8 ."

[tool.uv.sources]
prefeitura-rio = { git = "https://github.com/prefeitura-rio/prefeitura-rio.git", rev = "87fc0c33b6042939d4543219ad6e56be3755201a" }
